@@ -72,7 +72,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			</div>
 			<div class="entry_body">
 				<p align="justify">
-					{{ entry.content|emotions|safe|linebreaksbr }}
+					{{ entry.content|emotions|safe }}
 				</p>
 			</div>
 			<div class="entry_footer">
